--- a/SpaceServer.Business/SpaceServer.Business.csproj
+++ b/SpaceServer.Business/SpaceServer.Business.csproj
@@ -5,6 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Properties\Unitstats.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Properties\Unitstats.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Enums\" />
   </ItemGroup>
 
